--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@ body {
         <label>Language</label>
         <select id="lang" name="lang">
             <option value="en-fr">English-French</option>
-            <option value="fr-en" {% if language == "fr-en"%} selected {% endif %}>French-English</option>
+            <option value="fr-sw" {% if language == "fr-en"%} selected {% endif %}>French-Swahili</option>
         </select>
 
 
